--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tycho Brouwer | Portfolio</title>
 
+    <meta name="description" content="This is the portfolio website of Tycho Brouwer.">
+    <meta name="author" content="Tycho Brouwer">
+    <link rel="canonical" content="https://tychobrouwer.github.io/">
+
     <link rel="preload" href="css/main.css" as="style">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
